testdata/invalid/internal/domain/payment/handler/http/event_handler.go
package http

import _ "github.com/kimtaeyun/testproject-dc-invalid/internal/domain/payment/event"

func HandleEvent() {}
